--- a/package.json
+++ b/package.json
@@ -39,8 +39,10 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.10.4",
+    "install": "^0.13.0",
     "lodash": "^4.17.19",
-    "prop-types": "^15.7.2"
+    "prop-types": "^15.7.2",
+    "socket.io-client": "^2.3.0"
   },
   "peerDependencies": {
     "react": ">=16.13.1",
