--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "lodash": "^4.17.19",
     "ordering-api-sdk": "github:sergioaok/ordering-api-sdk",
     "prop-types": "^15.7.2",
+    "react-modal": "^3.11.2",
     "socket.io-client": "^2.3.0"
   },
   "peerDependencies": {
