--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "install": "^0.13.0",
     "lodash": "^4.17.19",
     "prop-types": "^15.7.2",
+    "react-modal": "^3.11.2",
     "socket.io-client": "^2.3.0"
   },
   "peerDependencies": {
