--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "html-webpack-plugin": "^4.3.0",
     "postcss-loader": "^3.0.0",
     "react": "^16.13.1",
+    "react-datepicker": "^3.1.3",
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.0.8",
     "react-router-dom": "^5.2.0",
