--- a/package.json
+++ b/package.json
@@ -39,9 +39,10 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.10.4",
+    "axios": "^0.20.0",
     "install": "^0.13.0",
     "lodash": "^4.17.19",
-    "ordering-api-sdk": "github:sergioaok/ordering-api-sdk#v0.0.3",
+    "ordering-api-sdk": "github:sergioaok/ordering-api-sdk",
     "prop-types": "^15.7.2",
     "socket.io-client": "^2.3.0"
   },
