--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "lodash": "^4.17.19",
     "ordering-api-sdk": "github:sergioaok/ordering-api-sdk#v0.0.3",
     "prop-types": "^15.7.2",
+    "react-google-login": "^5.1.21",
     "socket.io-client": "^2.3.0"
   },
   "peerDependencies": {
