--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@babel/plugin-transform-runtime": "^7.10.4",
     "@babel/preset-env": "^7.10.4",
     "@babel/preset-react": "^7.10.4",
+    "@stripe/react-stripe-js": "^1.1.2",
+    "@stripe/stripe-js": "^1.9.0",
     "babel-loader": "^8.1.0",
     "css-loader": "^3.6.0",
     "cypress": "^4.11.0",
