--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "moment": "^2.27.0",
     "ordering-api-sdk": "github:sergioaok/ordering-api-sdk#v0.0.4",
     "prop-types": "^15.7.2",
+    "react-apple-login": "^1.0.14",
     "socket.io-client": "^2.3.0"
   },
   "peerDependencies": {
