Cleanup some components

--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "@babel/runtime": "^7.10.4",
     "lodash": "^4.17.19",
     "moment": "^2.27.0",
-    "ordering-api-sdk": "github:sergioaok/ordering-api-sdk#v0.0.4",
+    "ordering-api-sdk": "github:sergioaok/ordering-api-sdk#development",
     "prop-types": "^15.7.2",
     "socket.io-client": "^2.3.0"
   },
