--- a/package.json
+++ b/package.json
@@ -45,13 +45,13 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.10.4",
+    "@stripe/react-stripe-js": "^1.1.2",
+    "@stripe/stripe-js": "^1.9.0",
     "lodash": "^4.17.19",
     "moment": "^2.27.0",
     "ordering-api-sdk": "github:sergioaok/ordering-api-sdk#development",
     "prop-types": "^15.7.2",
-    "socket.io-client": "^2.3.0",
-    "@stripe/react-stripe-js": "^1.1.2",
-    "@stripe/stripe-js": "^1.9.0"
+    "socket.io-client": "^2.3.0"
   },
   "peerDependencies": {
     "react": ">=16.13.1",
