--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./_modules/index.js",
   "scripts": {
     "clean": "shx rm -rf _bundles _modules",
-    "build": "npm run clean && babel ./src --out-dir ./_modules && babel ./native --out-dir ./_modules/native && webpack --config webpack.prod.js",
+    "build": "npm run clean && babel ./src --out-dir ./_modules && babel ./src --out-dir ./_modules/src && babel ./native --out-dir ./_modules/native && webpack --config webpack.prod.js",
     "build-dev": "npx webpack --mode=development",
     "serve": "npx webpack-dev-server --config webpack.dev.js",
     "lint": "standard",
