--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "cypress": "^4.11.0",
     "eslint-plugin-cypress": "^2.11.1",
     "html-webpack-plugin": "^4.3.0",
+    "husky": "^4.3.8",
     "postcss-loader": "^3.0.0",
     "react": "^16.13.1",
     "react-datepicker": "^3.1.3",
@@ -52,6 +53,11 @@
     "ordering-api-sdk": "github:Ordering-Inc/ordering-api-sdk#development",
     "prop-types": "^15.7.2",
     "socket.io-client": "^2.3.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-push": "cypress run"
+    }
   },
   "peerDependencies": {
     "react": ">=16.13.1",
