--- a/package.json
+++ b/package.json
@@ -11,6 +11,13 @@
     "lint": "standard",
     "test": "cypress open"
   },
+  "repository": {
+    "url": "git@github.com:Ordering-Inc/ordering-components.git"
+  },
+  "keywords": [
+    "ordering",
+    "ordering-components"
+  ],
   "author": "",
   "license": "ISC",
   "devDependencies": {
