--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "cypress": "^4.11.0",
     "eslint-plugin-cypress": "^2.11.1",
     "html-webpack-plugin": "^4.3.0",
+    "libphonenumber-js": "^1.9.4",
     "mini-css-extract-plugin": "^1.3.4",
     "husky": "^4.3.8",
     "react": "^16.13.1",
