--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "@stripe/stripe-js": "^1.9.0",
     "dayjs": "^1.9.3",
     "libphonenumber-js": "^1.9.17",
-    "ordering-api-sdk": "github:Ordering-Inc/ordering-api-sdk#release",
+    "ordering-api-sdk": "github:Ordering-Inc/ordering-api-sdk#development",
     "prop-types": "^15.7.2",
     "socket.io-client": "^2.3.0",
     "react-google-recaptcha": "latest"
