--- a/package.json
+++ b/package.json
@@ -58,8 +58,8 @@
     "libphonenumber-js": "^1.9.17",
     "ordering-api-sdk": "github:Ordering-Inc/ordering-api-sdk#release",
     "prop-types": "^15.7.2",
-    "socket.io-client": "^2.3.0",
-    "react-google-recaptcha": "latest"
+    "react-google-recaptcha": "latest",
+    "socket.io-client": "^2.3.0"
   },
   "husky": {
     "hooks": {
