--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   "dependencies": {
     "@babel/runtime": "^7.10.4",
     "@react-native-async-storage/async-storage": "^1.13.1",
+    "@segment/analytics-next": "^1.35.1",
     "@stripe/react-stripe-js": "^1.1.2",
     "@stripe/stripe-js": "^1.9.0",
     "dayjs": "^1.9.3",
