--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "@stripe/stripe-js": "^1.9.0",
     "dayjs": "^1.9.3",
     "libphonenumber-js": "^1.9.17",
-    "ordering-api-sdk": "github:Ordering-Inc/ordering-api-sdk#release",
+    "ordering-api-sdk": "github:Ordering-Inc/ordering-api-sdk#advanced-search",
     "prop-types": "^15.7.2",
     "react-google-recaptcha": "latest",
     "socket.io-client": "^2.3.0"
