--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "ordering-api-sdk": "github:Ordering-Inc/ordering-api-sdk#release",
     "prop-types": "^15.7.2",
     "react-google-recaptcha": "latest",
+    "react-google-recaptcha-v3": "^1.10.0",
     "socket.io-client": "^2.3.0"
   },
   "husky": {
