--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "dayjs": "^1.9.3",
     "firebase": "^9.9.2",
     "libphonenumber-js": "^1.9.17",
+    "moment": "^2.29.4",
     "ordering-api-sdk": "github:Ordering-Inc/ordering-api-sdk#release",
     "prop-types": "^15.7.2",
     "react-google-recaptcha": "latest",
