--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "@stripe/react-stripe-js": "^1.1.2",
     "@stripe/stripe-js": "^1.9.0",
     "dayjs": "^1.9.3",
-    "firebase": "^9.9.2",
+    "firebase": "9.15.0",
     "libphonenumber-js": "^1.9.17",
     "ordering-api-sdk": "github:Ordering-Inc/ordering-api-sdk#release",
     "prop-types": "^15.7.2",
